@@ -31,7 +31,7 @@ requires:
   perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Graph-Reader-UnicodeTree
-  homepage: https://github.com/tupinek/Graph-Reader-UnicodeTree
+  homepage: https://github.com/michal-josef-spacek/Graph-Reader-UnicodeTree
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Graph-Reader-UnicodeTree
+  repository: git://github.com/michal-josef-spacek/Graph-Reader-UnicodeTree
 version: '0.03'
