@@ -22,8 +22,8 @@ requires 'Readonly' => 0;
 requires 'perl' => '5.6.2';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Graph-Reader-UnicodeTree';
-resources 'homepage' => 'https://github.com/tupinek/Graph-Reader-UnicodeTree';
-resources 'repository' => 'git://github.com/tupinek/Graph-Reader-UnicodeTree';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Graph-Reader-UnicodeTree';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Graph-Reader-UnicodeTree';
 test_requires 'Encode' => 0;
 test_requires 'File::Object' => 0.07;
 test_requires 'Test::More' => 0;
