@@ -106,7 +106,7 @@ SEE ALSO
         Install the Graph::Reader modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Graph-Reader-UnicodeTree>
+    <https://github.com/michal-josef-spacek/Graph-Reader-UnicodeTree>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
