@@ -3,6 +3,7 @@
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.19 version.
  - Update author name.
+ - Update author github username.
  - Update copyright years.
 
 0.02 2015-09-28T19:56:27+02:00
